*Empty MediaWiki Message*

--- a/რომის_იმპერია.mw
+++ b/რომის_იმპერია.mw
@@ -3,35 +3,35 @@
 <table border="2" cellpadding="4" cellspacing="0" style="margin: 1em 1em 1em 0; border: 1px #aaa solid; border-collapse: collapse;><tr><td>[[რომის სამეფო]]</td><td>[[რომის რესპუბლიკა]]</td><td>[[რომის იმპერია]]</td></tr></table></center>
 
 
-რომის იმპერია - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიან ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხერდრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
+'''რომის იმპერია''' - ''([[ლათინური ენა|ლათინურად]] - Imperium Romanum)'' აღმოცენდა [[რომის რესპუბლიკა|რომის რესპუბლიკაში]] უზენაესი ძალაუფლების ერთ პიროვნების ხელში კონცენტრაციის შედეგად. პირველ იმპერატორად [[ოქტავიან ავგუსტუსი]] ითვლება, მაგრამ იმპერიას საფუძველი ჯერ კიდევ მისმა წინამორბედებმა ჩაუყარეს. [[რომის რესპუბლიკის წყობა]] ყოველგვარად მიმართული იყო იმისკენ რომ ცალკეული პიროვნების ხელში არ აღმოჩენილიყო ძალაუფლება, მაგრამ [[გაიუს მარიუსი|გაიუს მარიუსის]] სამხედრო რეფორმამ შექმნა ამისთვის საკმარისი პირობა. [[სულა|სულას]] და მარიუსს შორის დაწყებული სამოქალაქო ომის შემდეგ რომმა კიდევ არაერთი სამოქალაქო დაპირისპირება გადაიტანა. [[იულიუს კეისარი|იულიუს კეისარმა]] კი შექმნა იმპერიის შექმნის ყველა წინაპირობა. იგი გახდა პირველი ვის ხელშიც მოექცა უზენაესი ძალაუფლება, მაგრამ მას ჯერ კიდევ ჰყავდა ძლიერი ოპოზიცია - რესპუბლიკური იდეალების დამცველ სენატორებს შორის, თან საზოგადოება მორალურად ჯერ არ იყო მზად მიეღო იგი როგორც უზანაესი ძალაუფლების ერთადერთი მატარებელი. ეს კი დასრულდა ბრუტუსის და კასიუსის შეთქმულებით, რომლის შედეგადაც კეისარი სენატში მოკლეს. მიუხედავად ამისა კეისარის სახელს მიენიჭა უზენაესი ძალაუფლების მნიშვნელობა, ეს სიტყვა ამ მნიშვნელობით ბევრ ენაში შევიდა, მაგალითად [[გერმანული ენა|გერმანულად]] kaiser და [[რუსული ენა|რუსულად]] царь.
 
-კეისარის მკვლელობის შემდეგ ძვ. წ. 44 წელს, რომში სამოქალაქო დაპირისპირების ახალმა ტალღამ იფეთქა, რომლის მხოლოდ 27 წელს ოქტავიანის ანტონიუსზე გამარჯვებით დასრულდა. ამ დროისთვის ოქტავიანს უკვე აღარ დარჩა რესპუბლიკური ოპოზიცია, რის შედეგადაც მას იმავე წელს სენატმა მიანიჭა უზანაესი ძალაუფლება. 
+კეისარის მკვლელობის შემდეგ [[ძვ. წ. 44]] წელს, რომში სამოქალაქო დაპირისპირების ახალმა ტალღამ იფეთქა, რომლის მხოლოდ 27 წელს ოქტავიანის ანტონიუსზე გამარჯვებით დასრულდა. ამ დროისთვის ოქტავიანს უკვე აღარ დარჩა რესპუბლიკური ოპოზიცია, რის შედეგადაც მას იმავე წელს სენატმა მიანიჭა უზანაესი ძალაუფლება. 
 
 რესპუბლიკის იმპერიად გარდაქმნის კიდევ ერთი წინაპირობა იყო რომის სახელმწიფოს გაზრდა პუნიკური ომებისა, ბალკანეთის და მცირე აზიის ნაწილის დაპყრობის შედეგად. ამხელა სახელმწიფოს სამართავად რესპუბლიკის სახელმწიფო წყობა მოურგებელი აღმოჩნდა. 
 
-ძვ. წ. I საუკუნეში რომის იმპერია განფენილი იყო თანამედროვე [[პორტუგალია|პორტუგალიის]], [[ესპანეთი|ესპანეთის]], [[იტალია|იტალიის]], [[საბერძნეთი|საბერძნეთის]], [[მაკედონია|მაკედონიის]], [[თურქეთი|თურქეთის]], [[სირია|სირიის]], [[ისრაელი|ისრაელის]], [[ტუნისი|ტუნისის]] და ჩრდილოეთ [[ალჟირი|ალჟირის]] ტერიტორიებზე. ხოლო რომის პოლიტიკური გავლენა კიდევ უფრო მეტ ტერიტორიებზე ვრცელდებოდა. ამ დაპყრობებს კი კეისარმა მიუმატა გალია (თანამედროვე [[საფრანგეთი]]), პონტოს სამეფო ([[თურქეთი]]) და [[ბრიტანეთი]], ხოლო ოქტავიანმა [[ეგვიპტე]]. ამგვარად რომის იმპერია ძველი წელთაღრიცხვის დასასრულს მოიცავდა მთელს ხმელთაშუა ზღვისპირეთს და დასავლეთ ევროპას. ამის გარდა რომზე დამოკიდებული იყო მთელი რიგი სახელმწიფოები, რომლის მეფეებიც "რომაელი ხალხის მეგობრის და მოკავშირის" ტიტულს ატარებდნენ. იმ დროინდელ ევროპაში, დასავლეთ აზიაში და ჩრდილოეთ აფრიკაში არ იყო ძალა რომელიც შეძლებდა რომაულ ლეგიონებთან დაპირისპირებას.
+[[ძვ. წ. I]] საუკუნეში რომის იმპერია განფენილი იყო თანამედროვე [[პორტუგალია|პორტუგალიის]], [[ესპანეთი|ესპანეთის]], [[იტალია|იტალიის]], [[საბერძნეთი|საბერძნეთის]], [[მაკედონია|მაკედონიის]], [[თურქეთი|თურქეთის]], [[სირია|სირიის]], [[ისრაელი|ისრაელის]], [[ტუნისი|ტუნისის]] და ჩრდილოეთ [[ალჟირი|ალჟირის]] ტერიტორიებზე. ხოლო რომის პოლიტიკური გავლენა კიდევ უფრო მეტ ტერიტორიებზე ვრცელდებოდა. ამ დაპყრობებს კი კეისარმა მიუმატა გალია (თანამედროვე [[საფრანგეთი]]), [[პონტოს სამეფო]] ([[თურქეთი]]) და [[ბრიტანეთი]], ხოლო ოქტავიანმა [[ეგვიპტე]]. ამგვარად რომის იმპერია ძველი წელთაღრიცხვის დასასრულს მოიცავდა მთელს ხმელთაშუა ზღვისპირეთს და დასავლეთ ევროპას. ამის გარდა რომზე დამოკიდებული იყო მთელი რიგი სახელმწიფოები, რომლის მეფეებიც "რომაელი ხალხის მეგობრის და მოკავშირის" ტიტულს ატარებდნენ. იმ დროინდელ ევროპაში, დასავლეთ აზიაში და ჩრდილოეთ აფრიკაში არ იყო ძალა რომელიც შეძლებდა რომაულ ლეგიონებთან დაპირისპირებას.
 
 
 ==ოქტავიან ავგუსტუსის პრინციპატი==
 <small>იხ. [[რომაელ იმპერატორთა სია]]</small>
-[[სურათი:Statue-Augustus.jpg|thumb|ოქტავიან ავუსტუსი]]
+[[სურათი:Statue-Augustus.jpg|thumb|ოქტავიან ავგუსტუსი]]
 
-ოქტავიანეს იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომლსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიანმა ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიან ავგუსტუსი'''.
+ოქტავიანეს იმპერატორობის ეპოქა იწყება [[ძვ. წ. 27]] წლის [[13 იანვარი|13 იანვარს]], როდესაც ანტონიუსთან გამარჯვების შემდეგ იგი გამოვიდა სენატში და სთხოვა სენატორებს ჩამოერთმიათ მისთვის ტრიბუნის უფლება მოსილება, რომელსაც იგი სუსტი ჯანმრთელობის გამო ვეღარ განახორციელებდა, მაგრამ სენატორები შეეხვეწნენ არ დაეტოვებინა რესპუბლიკის მმართველობა და მიანიჭეს მას ავგუსტუსის წოდება. ოქტავიანმა ვითომ იყოყმანა და დათანხმდა. ამის შემდეგ მან აიღო თავისი მამობილის სახელი, და დაირქვა '''გაიუს იულიუს კეისარი ოქტავიან ავგუსტუსი'''.
 
-ოქტავიანმა გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე აღარფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
+ოქტავიანმა გარეგულად არ შეცვალა რესპუბლიკური ინსტიტუტები, მაგრამ რეალურად მისი კონტროლის გარეშე უკვე არაფერი არ ხდებოდა. მან დაიკავა ცენზორის თანამდებობა და სენატიდან დაითხოვა მისთვის არასასურველი პირები და შეავსო იგი მისი ერთგული ხალხით. ოქტავიანი ერიდებოდა მეფის ტიტულს, მან მხოლოდ პრინცეპსტის წიდება აიღო. მის მიერ ჩამოყალიბებულ სისტემასაც პრინციპატი ეწოდა და გასტანა III საუკუნემდე.
 
-ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი მხედართმთავარი, მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიანმა შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
+ავგუსტუსმა განასახლა ლეგიონების ვეტერანები დაპყრობილ ტერიტორიებზე, სადაც შექმნა რომაული კოლონიები. მის დროს ასევე დასრულდა იტალიის რომანიზაცია, გამაგრდა სახელმწიფოს საზღვრები. იგი არ იყო გამოჩენილი [[მხედართმთავარი]], მაგრამ იყო კარგი დიპლომატი და პოლიტიკოსი. მისი მმართველობის დროს რომის იერსახე სრულიად შეიცვალა, როგორ ავგუსტუსი ამბობდა, მან მიიღო აგურის რომი, ხოლო დატოვებს მარმარილოს ქალაქს. ოქტავიანმა შექმნა ქალაქებში სახანძრო რაზმები, რომლებიც ასევე პოლიციურ ფუნქციებს ასრულებდნენ, ასევე შექმნა გზების და წყლის გაყვანილობების ზედამხედველების თანამდებობები.
 
-ოქტავიანმა შეკვეეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან პრეტორიანელთა გვარდია შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლებნა მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოგორტების გარდა არანაერი სახის ჯარი არ დატოვა. მის დროის შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშვალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
+ოქტავიანმა შეკვეცა ლეგიონების რაოდენობა, დარჩენილი ლეგიონერები კი განასახლა არასტაბილურ პროვინციებში. საკუთარი დაცვისთვის კი მან [[პრეტორიანელები|პრეტორიანელთა გვარდია]] შექმნა, რომელიც ელიტარულ ჯარად ითვლებოდა. თვითონ მთავარსარდალი გახდა, ამგვარად მთელი სამხედრო ძალაუფლება მის ხელთ იყო. იტალიაში პრეტორიანელების და ქალაქური კოგორტების გარდა არანაერი სახის ჯარი არ დატოვა. მის დროს შეიქმნა სახელმწიფო კანცელარიაც. იტალიაში მან ააღორძინა საშუალო მიწათმფობელობა, სწორედ ეს კლასი და არმია იყო იმპერატორის ხელისუფლების დასაყრდნობი. ხოლო პროლეტარებისთვის ეწყობოდა უფასო პურის გაცემები.
 
 [[სურათი:Ital007.jpg|thumb|left|იტალიის რეგიონები ავგუსტუსის დროს]]
-მან, როგორც მთავარმა ცენზორმა ითავა ერის ზნეობრივი მდგომარეობის ზედამხედველობა. ამ პერიოდში პატრიარქალური რომაული ზნეჩვეულებები დაკნინებული იყო. ავგუსტუსმა მთელი რიგი კანონები გამოსცა ზნეობის ასამაღლებლად, მაგრამ რომაელები ამას უკმაყოფილებით შეხვდნენ. ავგუსტუსი ასევე ცდილობდა რომაელების დემოგრაფიული მდგომარეობის გაუმჯობესებას, ამ მიზნით იგი 3 და მეტ შვილიან მამებს მრავალ წასახალისებელ პრივილეგიებს ანიჭებდა, ხოლო მის სახელმწიფო აპარატში დაუცოლშვილებელი კაცი მაღარ თანამდებობას ვერ მიიღებდა.
+მან, როგორც მთავარმა ცენზორმა ითავა ერის ზნეობრივი მდგომარეობის ზედამხედველობა. ამ პერიოდში პატრიარქალური რომაული ზნეჩვეულებები დაკნინებული იყო. ავგუსტუსმა მთელი რიგი კანონები გამოსცა ზნეობის ასამაღლებლად, მაგრამ რომაელები ამას უკმაყოფილებით შეხვდნენ. ავგუსტუსი ასევე ცდილობდა რომაელების დემოგრაფიული მდგომარეობის გაუმჯობესებას, ამ მიზნით იგი 3 და მეტ შვილიან მამებს მრავალ წასახალისებელ პრივილეგიებს ანიჭებდა, ხოლო მის სახელმწიფო აპარატში დაუცოლშვილებელი კაცი მაღალ თანამდებობას ვერ მიიღებდა.
 
-მიუხედავად იმისა რომ გარეგნულად პრინცეპსტი მართავდა ქვეყანას სენატთან ერთან, მან აუკრძალა სენატორებს განსაკუთრებული ნებართვის გარეშე დაეტოვებინათ იტალია, რადგან ეშინოდა პროვინციებში მათი გავლენის ზრდის. ქალაქებში და პროვინციებში მან დანიშნა პრეფექტები, რომლებიც პირადად მის წინაშე აგებდნენ პასუხს. პრეტორიანულ გვარდიასაც სათავეში პრეფექტი ედგა, იმპერიაში ეს ერთერთი ყველაზე მაღალი პოსტი იყო.
+მიუხედავად იმისა, რომ გარეგნულად პრინცეპსტი მართავდა ქვეყანას სენატთან ერთან, მან აუკრძალა სენატორებს განსაკუთრებული ნებართვის გარეშე დაეტოვებინათ იტალია, რადგან ეშინოდა პროვინციებში მათი გავლენის ზრდის. ქალაქებში და პროვინციებში მან დანიშნა პრეფექტები, რომლებიც პირადად მის წინაშე აგებდნენ პასუხს. პრეტორიანულ გვარდიასაც სათავეში პრეფექტი ედგა, იმპერიაში ეს ერთერთი ყველაზე მაღალი პოსტი იყო.
 
-პროვინციებში აჯანყენები საკმაოდ ხშირად ხდებოდა, მაგრამ რომაელებს არ უჭირდათ მათი ჩახშობა.  ყველაზე სერიოზული აჯანყება იყო დალმაციაში და პანონიაში. (დუნაის პირეთი). [[ტიბერიუსი|ტიბერიუსმა]] შეკრიბა 20 ლეგიონი. აჯანყების ჩახშობა მოხერხდა დუნაელი ტომების ერთერთი ლიდერის ღალატის შედეგად. ამის შემდეგ იგი ეცადა დაეპყრო გერმანია, მოხდა არაერთი ლაშქრობა, რომლებსაც ტიბერიუსი და [[დრუზუსი]] ხელმძღვანელობდნენ, მარამ მნიშვნელოვან წარმატებებს ვერ მიაღწიეს, ხოლო [[ტევტობურის ტრის ბრძოლა|ტევტობურის ტრის ბრძოლაში]] კი [[9]] წელს მხედართმთავარი [[კვინტილიუს ვარუსი]] სასტიკად დამარცხდა, ჯარი კი განადგურდა.
+პროვინციებში აჯანყენები საკმაოდ ხშირად ხდებოდა, მაგრამ რომაელებს არ უჭირდათ მათი ჩახშობა.  ყველაზე სერიოზული აჯანყება იყო დალმაციაში და პანონიაში. (დუნაის პირეთი). [[ტიბერიუსი|ტიბერიუსმა]] შეკრიბა 20 ლეგიონი. აჯანყების ჩახშობა მოხერხდა დუნაელი ტომების ერთერთი ლიდერის ღალატის შედეგად. ამის შემდეგ იგი ეცადა დაეპყრო გერმანია, მოხდა არაერთი ლაშქრობა, რომლებსაც ტიბერიუსი და [[დრუზუსი]] ხელმძღვანელობდნენ, მაგრამ მნიშვნელოვან წარმატებებს ვერ მიაღწიეს, ხოლო [[ტევტობურის ტრის ბრძოლა|ტევტობურის ტრის ბრძოლაში]] კი [[9]] წელს მხედართმთავარი [[კვინტილიუს ვარუსი]] სასტიკად დამარცხდა, ჯარი კი განადგურდა.
 
-ამ აჯანყებების ჩახშობის გარდა ავგუსტუსს პრაქტიკულად არ უწარმოებია დამპყრობლური ომები. იმისი საგარეო პოლიტიკა აქტიური დიპლომატიით შემოიფარგლებოდა. იგი ყოველგვარად ცდილობდა მოსაზღვრე სახელმწიფოებთან და ტომებთან კარგი ურთიერთობა დაემყარებინა, ხელი მოაწერა სამშვიდობო ხელშეკრულებას პართიელებთან, რომლებმაც რომში დააბრუნეს კრასუსის და ანტონიუსის ლაშქრობებიდან დარჩენილი ტყვეები, ასევე დააბრუნეს დამარცხებული ლეგიონების სიმბოლოები.
+ამ აჯანყებების ჩახშობის გარდა ავგუსტუსს პრაქტიკულად არ უწარმოებია დამპყრობლური ომები. მისი საგარეო პოლიტიკა აქტიური დიპლომატიით შემოიფარგლებოდა. იგი ყოველგვარად ცდილობდა მოსაზღვრე სახელმწიფოებთან და ტომებთან კარგი ურთიერთობა დაემყარებინა, ხელი მოაწერა სამშვიდობო ხელშეკრულებას პართიელებთან, რომლებმაც რომში დააბრუნეს კრასუსის და ანტონიუსის ლაშქრობებიდან დარჩენილი ტყვეები, ასევე დააბრუნეს დამარცხებული ლეგიონების სიმბოლოები.
 
 ოქტავიან ავგუსტუსი გარდაიცვალა [[14]] წელს, იგი როგორც მისი მალობილი ღმერთად იყო აღიარებული.
 
@@ -48,7 +48,7 @@
 ===კალიგულა===
 [[სურათი:Caligula.jpg|thumb|left|კალიგულა]]
 
-ტიბერიუსის სიკვდილის შემდეგ მისი მემკვიდრე გახდა გაიუს კეისარი, რომელიც ისტორიაში თავისი მეტსახელით [[კალიგულა|კალიგულათი]] შევიდა. თანამედროვენი მას ახასიათებდნენ როგორც გიჟს. იგი მოითხოვდა, რომ მისთვის როგორც ღმერთისთვის ეცათ პატივი და აპირებდა საკუთარი ცხენის კონსულად დანიშვნას. მან სწრაფად გაფლანგა ტიბერიუსის მიერ დაგროვილი ფული, შემდეგ კი მდიდარი სენატორების და უბრალო მოქალაქეების ქონების კონფისკაცია დაიწყო. მან უამრავი ადამიანი დასაჯა სიკვდილით პრაკტიკულად ყოველგვარ მიზეზგარეშე. იერუსალიმის ტაძარში მას საკუთარი ქანდაკების დადგმა უნდოდა, მაგრამ იუდევლებმა სასტიკი პროტესტი გამოთქვეს, ისინი დარბევას მხოლოს კალიგულას მკვლელობამ გადაარჩინა. [[41]] წელს პრეტორიანელთა პრეფექტმა [[კასიუს ჰერეა|კასიუს ჰერეამ]] მოკლა კალიგულა. ამბოხებულთა ნაწილს ისევ რესპუბლიკის დაბრუნება უნდოდათ, მაგრამ პრეტორიანელებმა იმპერატორად კალიგულას ბიძა [[კლავდიუსი]] აღიარეს.
+ტიბერიუსის სიკვდილის შემდეგ მისი მემკვიდრე გახდა გაიუს კეისარი, რომელიც ისტორიაში თავისი მეტსახელით [[კალიგულა|კალიგულათი]] შევიდა. თანამედროვენი მას ახასიათებდნენ როგორც გიჟს. იგი მოითხოვდა, რომ მისთვის როგორც ღმერთისთვის ეცათ პატივი და აპირებდა საკუთარი ცხენის კონსულად დანიშვნას. მან სწრაფად გაფლანგა ტიბერიუსის მიერ დაგროვილი ფული, შემდეგ კი მდიდარი სენატორების და უბრალო მოქალაქეების ქონების კონფისკაცია დაიწყო. მან უამრავი ადამიანი დასაჯა სიკვდილით პრაკტიკულად ყოველგვარ მიზეზგარეშე. იერუსალიმის ტაძარში მას საკუთარი ქანდაკების დადგმა უნდოდა, მაგრამ იუდევლებმა სასტიკი პროტესტი გამოთქვეს, ისინი დარბევას მხოლოდ კალიგულას მკვლელობამ გადაარჩინა. [[41]] წელს პრეტორიანელთა პრეფექტმა [[კასიუს ჰერეა|კასიუს ჰერეამ]] მოკლა კალიგულა. ამბოხებულთა ნაწილს ისევ რესპუბლიკის დაბრუნება უნდოდათ, მაგრამ პრეტორიანელებმა იმპერატორად კალიგულას ბიძა [[კლავდიუსი]] აღიარეს.
 
 ===კლავდიუსი===
 თავიდან სენატს არ სურდა [[კლავდიუსი|კლავდიუსის]] იმპერატორად აღიარება და იყო კიდევაც რესპუბლიკის აღდგენის მცდელობა, მაგრამ ლეგიონებმა ამას მხარი არ დაუჭირეს, სენატს მოუწია კლავდიუსის ცნობა, მაგრამ მათსა და ახალ იმპერატორს შორის საკმაოდ ცივი უერთიერთობა იყო.
@@ -58,23 +58,23 @@
 
 წინამორბედებისგან განსხვავებით იგი აქტიურად აწარმოებდა დამპყრობლურ ომებს. მისი პრინციპატის დროს იმპერიას შემოუერთდა ბრიტანეთი, [[მავრიტანია]], [[თრაკიაკია]] და მცირე აზიის ზოგიერთი რეგიონები. იგი ასევე ცდილობდა სასომხეთში გაემყარებინა პოზიციები, რაც პართიასთან ომით დასრულდა, ეს ომი 60-ანი წლების შუამდე გაგრძელდა. მიუხედავად ამ ყველაფრისა, მისი ურთიერთობა სენატთან მაინც დაძაბული დარჩა. 
 
-კლავდიუსის ოჯახური ცხოვრება კი ცუდად აეწყო, მას შემდეგ რაც მისმა ცოლმა, მესალინამ უღალატა, მან ცოლად აგრიპინა უმცროსი მოიყვანა, რომლემაც აიძულა ეშვილებინა მისი შვილი პირველი ქოწინებისგან [[ნერონი|ლუციუს დომიციუს ნერონი]]. ამის შემდეგ, [[54]] წელს, როგორც თვლიან მან მოწამლა იმპერატორი და 17 წლის ვაჟთან ერთად წავიდა პრეტორიანელების ბანაკში, სადაც ლეგიონერებმა იგი აღიარეს ახალ იმპერატორად.
+კლავდიუსის ოჯახური ცხოვრება კი ცუდად აეწყო, მას შემდეგ რაც მისმა ცოლმა, მესალინამ უღალატა, მან ცოლად აგრიპინა უმცროსი მოიყვანა, რომელმაც აიძულა ეშვილებინა მისი შვილი პირველი ქოწინებისგან [[ნერონი|ლუციუს დომიციუს ნერონი]]. ამის შემდეგ, [[54]] წელს, როგორც თვლიან მან მოწამლა იმპერატორი და 17 წლის ვაჟთან ერთად წავიდა პრეტორიანელების ბანაკში, სადაც ლეგიონერებმა იგი აღიარეს ახალ იმპერატორად.
 
 ===ნერონი===
 [[სურათი:Nero.gif|thumb|left|ნერონი]]
 
-თავის პრინციპატის დასაწყისში [[ნერონი|ნერონი]] ჯერ არ ამჟღავნებდა იმ უარყოფით თვისებებს რითაც მოგვიანებით შევიდა ისტორიაში. როგორც ავღნიშნეთ იგი სულ 17 წლის იყო როდესაც გახდა იმპერატორი, მან იმპერიის მმართველობა სენატს მიანდო. იგი იმყოფებოდა თავისი ამღზრდელის [[სენეკა|ლუციუს ანეუს სენეკას]], პრეტორიანელთა პრეფექტის, სექსტუს აფრანიუს ბურუსის და საკუთარი დედის გავლენის ქვეშ, ასე რომ პოლიტიკურ ცხოვრებაში იგი არანაერ მონაწილეობას არ იღებდა. უმეტესად იგი დაკავებული იყო სიმღერით და ლექსების წერით. მოგვიანებით იგი იმდენად მოექცა სენეკას გავლენის ქვეშ, რომ დედამისმა კლავდიუსის ვაჟის, [[ბრიტანიკუსი|ბრიტანიკუსის]] დაპირისპირება სცადა მისთვის, მაგრამ [[55]] წელს მოაკვლევინეს ბრიტანიკუსი, ხოლო [[59]] წელს ნერონმა საკუთარი დედა მოაკვლევინა. მისი შემდეგი მსხვერპლი გახდა მისი მეუღლე ოქტავია, რომელიც რომაელებს ძალიან უყვარდათ, მისი მკვლელობის შემდეგ ნერონის პოპულარობა ხალხში ძალიან დაეცა. 62 წელს მოკვდა ბურუსი, სენეკამ კი დაკარგა ნერონზე გავლენა და მას თავი მოაკვლევინეს.
+თავის პრინციპატის დასაწყისში [[ნერონი|ნერონი]] ჯერ არ ამჟღავნებდა იმ უარყოფით თვისებებს რითაც მოგვიანებით შევიდა ისტორიაში. როგორც ავღნიშნეთ იგი სულ 17 წლის იყო როდესაც გახდა იმპერატორი, მან იმპერიის მმართველობა სენატს მიანდო. იგი იმყოფებოდა თავისი ამღზრდელის [[სენეკა|ლუციუს ანეუს სენეკას]], პრეტორიანელთა პრეფექტის, სექსტუს აფრანიუს ბურუსის და საკუთარი დედის გავლენის ქვეშ, ასე რომ პოლიტიკურ ცხოვრებაში იგი არანაერ მონაწილეობას არ იღებდა. უმეტესად იგი დაკავებული იყო სიმღერით და ლექსების წერით. მოგვიანებით იგი იმდენად მოექცა სენეკას გავლენის ქვეშ, რომ დედამისმა კლავდიუსის ვაჟის, [[ბრიტანიკუსი|ბრიტანიკუსის]] დაპირისპირება სცადა მისთვის, მაგრამ [[55]] წელს მოაკვლევინეს ბრიტანიკუსი, ხოლო [[59]] წელს ნერონმა საკუთარი დედა მოაკვლევინა. მისი შემდეგი მსხვერპლი გახდა მისი მეუღლე ოქტავია, რომელიც რომაელებს ძალიან უყვარდათ, მისი მკვლელობის შემდეგ ნერონის პოპულარობა ხალხში ძალიან დაეცა. [[62]] წელს მოკვდა ბურუსი, სენეკამ კი დაკარგა ნერონზე გავლენა და მას თავი მოაკვლევინეს.
 
 [[64]] წლის ზაფხულში რომში საშინელი ხანძარი მოხდა, ქალაქის 14 უბნიდან 3 სრულიად განადურდა, ხოლო 7-ში შენობების უმეტესობა დაიწვა. უამრავი ადამიანი დაიღუპა. ქალაქში ჭორები დადიოდა, რომ იმპერატორმა თვითონ მოაწყო ხანძარი, რათა ქალაქის დაწვის პროცესის ხილვით მიეღო პოემა "ტროას" დაწერისთვის შთაგონება. ამ ჭორების უარსაყოფათ ნერონმა "მოძებნა" დამნაშავენი, ესენი ქრისტიანები აღმოჩნდნენ და მათ წინააღმდეგ სასტიკი, რეპრესიები დაიწყო. ხალხს, ვისაც ქრისტიანობაში ამხელდნენ, იჭერდნენ და ცირკის არენაზე ველურ ცხოველებს აგლეჯინებდნენ ან ჯვრებზე აცვამდნენ. დაზუსტებით უცნობია თუ ვინ იყო ხანძრის მომწყობი. იმდროინდელი ისტორიკოსი [[გაიუს სვეტონიუს ტრანკვილუსი]] არაორაზროვნათ მიუთითებს რომ დამნაშავე ნერონი იყო, მაგრამ ამის დამამტკიცებელი საბუთი არ არსებობს, თან უნდა გავითვალისწინოთ რომ ნერონი არ სარგებლობდა პოპულარობით და სვეტონიუსი შეიძლება მიკერძოვებული ყოფილიყო.
 
-ნერონის დროს ხაზინა ისევე მალე დაცარიელდა, როგორც ეს კალიგულას დროს მოხდა და მან იგივე ხერხებს მიმართა მის შესავსებად. ამას რა თქმა უნდა სენატორებში დიდი უკმაყოფილება მოყვა. 65 წელს სენატორებმა სცადეს შეთქმულების მოწყობა, მაგრამ ამის შესახებ იმპერატორმა შეიტყო და შეთქმულები სასტიკად დასაჯა.
+ნერონის დროს ხაზინა ისევე მალე დაცარიელდა, როგორც ეს კალიგულას დროს მოხდა და მან იგივე ხერხებს მიმართა მის შესავსებად. ამას რა თქმა უნდა სენატორებში დიდი უკმაყოფილება მოყვა. [[65]] წელს სენატორებმა სცადეს შეთქმულების მოწყობა, მაგრამ ამის შესახებ იმპერატორმა შეიტყო და შეთქმულები სასტიკად დასაჯა.
 
 ამ მოვლენების შემდეგ ნერონი საბერძნეთში გაემგზავრა, სადაც იგი საჯაროდ გამოდიოდა სცენაზე როგორც მსახიობი და მომღერალი. ბერძნები კი პირფერობდნენ როგორც შეეძლოთ და ყოველგვარ შეჯიბრებში აჯილდოვებდნენ მას. ამისთვის ნერონმა ბერძნული ქალაქები მთელი რიგი ნალოგებისგან გაათავისუფლა. ამასთან ერთად ნერონმა რომში დაიწყო მდიდრული სასახლის მშენებლობა, რომელსაც "ოქროს სახლი" უწოდა. ამან ყველაფერმა რომაელებში აღშფოთება გამოიწვია, ხოლო სენატმა იმპერატორთან ურთიერთობა გაწყვიტა. [[66]] წელს ნერონმა მეორე ცოლიც მოაკვლევინა და მესამედ დაქორწინდა. უკმაყოფილებას იწვევდა პართიასთან გაჭიანურებული ომიც, რომელშიც რომაელებმა საგრძნობელ წარმატებებს ვერ მიაღწიეს. [[63]] წელს ნერონმა მაინც მოახერხა პართიელებთან კომპრომისული სამშვიდობო ხელშეკრულების დადება. [[66]] წელს [[იუდეა|იუდეაში]] დაიწყო [[იუდეის ომი|აჯანყება]]. მათ წინააღმდეგ ნერონმა გაგზავნა ლეგიონი ცესტიუს გალუსის მხედართმთავრობით, მაგრამ იუდეველებმა იგი სასტიკად დაამარცხეს. ნერონს ეშინოდა იუდეველთა წინააღმდეგ გავლენიანი მხედართმთავრის გაგზავნა, რადგან ლეგიონებზე დაყრდნობით მხედართმავარს შეეძლო გადატრიალების მოწყობა, ამიტომ მისი არჩევანი [[ვერპასიან ფლავიუსი|ვერპასიან ფლავიუსზე]] გაჩერდა, რომელიც არც წარჩინებული წარმომავლობის იყო და არც გავლენა ჰქონდა.
 
 [[68]] წელს ნერონი დაბრუნდა რომში, მაგრამ სიტუაცია კონტროლიდან საბოლოოდ გამოვიდა. აჯანყდნენ ლეგიონები გალიაში, მალე მათ ესპანური ლეგიონებიც შეუერთდნენ. რომის იმპერიას ჩამოშორდა ბრიტანეთი, იუდეაში სიტუაციას რომაელები უკვე აღარ ფლობდნენ. ქვეყნის ეკონომიკური მდგომარეობაც ძალიან ცუდი იყო. ესპანეთში აჯანყებულმა ლეგიონებმა იმპერატორად [[გალბა]] აღიარეს. ნერონს ამ სიტუაციის უკვე ძალიან შეეშინდა და ეგვიპტეში გაქცევა დააპირა, როდესაც პრეტორიანელებმა შეიტყვეს ამის შესახებ, ისინიც აუჯანყდნენ იმპერატორს. ყველასგან მიტოვებულმა, ნერომნა თავი მოიკლა. ასე დასრულდა იულიუს-კლავდიუსების მმართველობა რომში.
 
 ==სამოქალაქო ომი==
-შემდეგი [[69]] წელი ისტორიაში შევიდა როგორც ოთხი იმპერატორის წელი. ნერონის სიკვდილის შემდეგ გალბა ჩამოვიდა რომში, მაგრამ, როგორც მიღებული იყო, მან არ დააჯილდოვა თავისი მომხრეები, პირიქით, მან პრეტორიანელებს ის საჩუქრებიც წაართვა რაც მათ ნერონისგან ჰქონდათ მიღებული. უკმაყოფილო ლეგიონერებმა ქვემო გერმანიის მმართველი [[ვიტელიუსი]] აიჩიეს იმპერატორად, ხოლო ახალი კანდიდატი სენატს სძულდა, რადგან იგი ნერონთან იყო დაახლოვებული. ხოლო 69 წლის [[15 იანვარი|15 იანვარს]] პტრეტორიანელებმა მოაწყეს შეთქმულება, გალბა და მისი შვილობილი მოკლეს, ხოლო იმპერატორად [[სალვიუს ოტო]] აღიარეს.
+შემდეგი [[69]] წელი ისტორიაში შევიდა როგორც ოთხი იმპერატორის წელი. ნერონის სიკვდილის შემდეგ გალბა ჩამოვიდა რომში, მაგრამ, როგორც მიღებული იყო, მან არ დააჯილდოვა თავისი მომხრეები, პირიქით, მან პრეტორიანელებს ის საჩუქრებიც წაართვა რაც მათ ნერონისგან ჰქონდათ მიღებული. უკმაყოფილო ლეგიონერებმა ქვემო გერმანიის მმართველი [[ვიტელიუსი]] აიჩიეს იმპერატორად, ხოლო ახალი კანდიდატი სენატს სძულდა, რადგან იგი ნერონთან იყო დაახლოვებული. ხოლო [[69]] წლის [[15 იანვარი|15 იანვარს]] პტრეტორიანელებმა მოაწყეს შეთქმულება, გალბა და მისი შვილობილი მოკლეს, ხოლო იმპერატორად [[სალვიუს ოტო]] აღიარეს.
 
 პროვინციების უმეტესობამ სცნო ოტო, მაგრამ ვიტელიუსი არ შეეგუა ბედს და გერმანული ლეგიონებით შეიჭრა იტალიაში. 69 წლის აპრილში მოხდა ოტოს და ვიტელიუსის ჯარებს შორის შეტაკება, სადაც ოტო დამარცხდა და თავი მოიკლა. ვიტელიუსი აღიარეს იმპერატორად, მაგრამ მისი ლეგიონერები იტალიაში ისე იქცეოდნენ, როგორც მტრის მიწაზე. ვიტელიუსიც კი აღშფოთდა მარადიორობის მაშტაბებით და ლეგიონები გერმანიაში დააბრუნა ამით მისი პოზიციებიც რომში დასუსტდა.
 
@@ -85,7 +85,7 @@
 ===ვესპასიანი და ტიტუსი===
 [[სურათი:Vespasian-coin.jpg|thumb|ვერსპასიანის გამოსახულება მონეტაზე]]
 
-ვერსპასიანი აღიარეს როგორც სენატორებმა, ასევე ლეგიონერებმაც. მაგრამ იმპერიაში მშვიდობა ჯერ არ სუფევდა. იუდეაში აჯანყება გრძელდებოდა, აჯანყდა ასევე გალიაც და ქვემო გერმანიაც. [[70]] წელს, როდესაც იტალიაში სამოქალაქო ომი დარულდა, რომის ლეგუიონებმა ვერპასიანის ვაჟის, [[ფლავიუსი, ტიტუს|ტიტუსის]] მეთაურობით აიღეს იერუსალიმი და დაანგრიეს ტაძარი. აჯანყება არნახული სისასტიკით ჩაახშვეს. იერუსალიმი მიწასთან გაასწორეს, ხოლო მოსახლეობა მონებად გაყიდეს. იუდეამ ამ დღიდან არსებობა შეწყვიტა. პოვსტანცების ბრძოლა კი კიდევ 3 წლის მანძილზე გრძელდებოდა.
+ვერსპასიანი აღიარეს როგორც სენატორებმა, ასევე ლეგიონერებმაც. მაგრამ იმპერიაში მშვიდობა ჯერ არ სუფევდა. იუდეაში აჯანყება გრძელდებოდა, აჯანყდა ასევე გალიაც და ქვემო გერმანიაც. [[70]] წელს, როდესაც იტალიაში სამოქალაქო ომი დასრულდა, რომის ლეგიონებმა ვერპასიანის ვაჟის, [[ფლავიუსი, ტიტუს|ტიტუსის]] მეთაურობით აიღეს [[იერუსალიმი]] და დაანგრიეს ტაძარი. აჯანყება არნახული სისასტიკით ჩაახშვეს. იერუსალიმი მიწასთან გაასწორეს, ხოლო მოსახლეობა მონებად გაყიდეს. იუდეამ ამ დღიდან არსებობა შეწყვიტა. პოვსტანცების ბრძოლა კი კიდევ 3 წლის მანძილზე გრძელდებოდა.
 
 გალიაში კი აჯანყებულებს სურდათ გალიის ცალკე იმპერიად ჩამოყალიბება. აჯანყებულთა ნაწილს სურდათ რომთან ღია ომი, მაგრამ გალურმა არისტოკრატიამ მათ არ დაუჭირა მხარი. რომაელებმა აქაც ჩაახშვეს აჯანყება, მაგრამ რეპრესიები არ ჩაუტარებიათ. რომაელი მხედართმთავარი [[პეტილიუს ცერეალისი]] გამოვიდა გალების წინაშე და წარმოთქვა სიტყვა, რომელშიც იგი გალებს არწმუნებდა რომ რომაელები მათი მტრები არ არიან და მათ იმპერია იმდენათვე ეკუთვნით როგორც რომაელებს. ამგვარად გალიაშიც მშვიდობა დამყარდა.
 
@@ -106,16 +106,16 @@
 
 ტიტუსის გარდაცვალების შემდეგ პრეტორიანელებმა იმპერატორად მისი უმცროსი ძმა [[დომიციანი]] აღიარეს. იგი უფროს ძმას და მამას თითქმის არაფრით არ ჰგავდა, ხასიათის და ქცევებით იგი იულიუ-კლავდიუსების დინასტიის "სახელგანთქმულ" იმპერატორებს დაემსგავსა. მან ჯერ კიდევ გაპრინცეპსტებამდე გაიფუჭა სენატთან ურთიერთობა და ეყრდნობოდა მხოლოდ სამხედროებს. მიუხედავად ამისა იგი ცდილობდა შეენარჩუნებინა პოპულარობა პლებსში, რისთვისაც ხშირად აწყობდა ნაირნაირ სანახაობებს.
 
-მისი მმართველობის პერიოდში შემოერთებულ იქნა გერმანიის სამხრეთ დასავლეთი, სადაც ვეტერანების კოლონიები შეიქმნა. დუნაის პირეთზე კი დაკების, მარკომანების და სარმატების ტომებმა სერიოზულად დაამარცხეს რომაელები, ომი 89 წლამდე გრძელდებოდა, სანამ დომიციანმა დაკების ბელადთან სამშვიდობო ხელშეკრულება არ დადო. ამ ხელშეკრულებამ რომაელების უკმაყოფილება გამოიწვია. ბრიტანეთში სამხედრო მოქმედებები წარმატებით ხორციელდებოდა, მაგრამ აღმოსავლეთ პროვინციებში მცირე აზიიდან კაკასიის მიმართულებით ექსპანსია ვერ განხორციელდა. 
+მისი მმართველობის პერიოდში შემოერთებულ იქნა გერმანიის სამხრეთ დასავლეთი, სადაც ვეტერანების კოლონიები შეიქმნა. დუნაის პირეთზე კი დაკების, მარკომანების და სარმატების ტომებმა სერიოზულად დაამარცხეს რომაელები, ომი [[89]] წლამდე გრძელდებოდა, სანამ დომიციანმა დაკების ბელადთან სამშვიდობო ხელშეკრულება არ დადო. ამ ხელშეკრულებამ რომაელების უკმაყოფილება გამოიწვია. ბრიტანეთში სამხედრო მოქმედებები წარმატებით ხორციელდებოდა, მაგრამ აღმოსავლეთ პროვინციებში მცირე აზიიდან კაკასიის მიმართულებით ექსპანსია ვერ განხორციელდა. 
 
-89 წელს ქვემო გერმანიის ლეგატი ანტონიუს სატურნინუსი იქაურმა ლეგიონებმა იმპერატორად აღიარეს, მაგრამ დომიციანმა მოახერხა ამ აჯანყების ჩახშობა. 96 წლის შეთქმულებისას კი იმპერატორი მოკლეს. სენატორებმა ახალ იმპერატორად აუირჩიეს ერთერთი უხუცესი სენატორი [[ნერვა|მარკუს კოკციუს ნერვა]].
+89 წელს ქვემო გერმანიის ლეგატი ანტონიუს სატურნინუსი იქაურმა ლეგიონებმა იმპერატორად აღიარეს, მაგრამ დომიციანმა მოახერხა ამ აჯანყების ჩახშობა. [[96]] წლის შეთქმულებისას კი იმპერატორი მოკლეს. სენატორებმა ახალ იმპერატორად აუირჩიეს ერთერთი უხუცესი სენატორი [[ნერვა|მარკუს კოკციუს ნერვა]].
 
 ==ანტონინების დინასტია==
 [[სურათი:Nerva2.JPG|thumb|ნერვა]]
 
-ნერვას იმპერატორობის არჩევიით ლეგიონერები და პრეტორიანელები უკმაყოფილონი დარჩნენ, ამიტომ მათ გადმოსაბირებლად მან იშვილა ზემო გერმანიის მმართველი [[ტრაიანი|მარკუს ულპიუს ტრაიანი]]. ამგვარად ჩამოყალიბდა იმპერატორთა მემკვიდრეობის ახალი ფორმა, პრინცეპსტობა უკვე არა მამიდან შვილზე ან უახლოეს ნათესავზე გადადიოდა, არამედ სენატის რჩეულზე, რომელსაც მოქმედი იმპერატორი იშვილებდა. ამგვარად ანტონიუსების დინასტიის წარმომადგენლები ერთმანეთის სისხლით ნათესავები აღარ იყვნენ. იმპერატორი არჩევის შემდეგ ფიცს დებდა რომ სენატის განაჩენის გარეშე სენატორს არ დასჯიდა სიკვდილით და მხოლოდ ამ პირობით დებდა სენატი იმპერატორისადმი ერთგულების ფიცს.
+ნერვას იმპერატორობის არჩევით ლეგიონერები და პრეტორიანელები უკმაყოფილონი დარჩნენ, ამიტომ მათ გადმოსაბირებლად მან იშვილა ზემო გერმანიის მმართველი [[ტრაიანი|მარკუს ულპიუს ტრაიანი]]. ამგვარად ჩამოყალიბდა იმპერატორთა მემკვიდრეობის ახალი ფორმა, პრინცეპსტობა უკვე არა მამიდან შვილზე ან უახლოეს ნათესავზე გადადიოდა, არამედ სენატის რჩეულზე, რომელსაც მოქმედი იმპერატორი იშვილებდა. ამგვარად ანტონიუსების დინასტიის წარმომადგენლები ერთმანეთის სისხლით ნათესავები აღარ იყვნენ. იმპერატორი არჩევის შემდეგ ფიცს დებდა რომ სენატის განაჩენის გარეშე სენატორს არ დასჯიდა სიკვდილით და მხოლოდ ამ პირობით დებდა სენატი იმპერატორისადმი ერთგულების ფიცს.
 
-ნერვამ ჩაატარა ახალი აგრარული რეფორმა, რომლითაც გაღატაკებულ მოსახლეობას დაურიგა მიწები, მისი მმართველობის დროს ასევე შეიქმნა "ალიმენტარული ფონდი" ობოლ ბავშვთა მოსავლელად და აღსაზრდელად. [[98]] წელს ნერვა გარდაიცვალა
+ნერვამ ჩაატარა ახალი აგრარული რეფორმა, რომლითაც გაღატაკებულ მოსახლეობას დაურიგა მიწები, მისი მმართველობის დროს ასევე შეიქმნა "ალიმენტარული ფონდი" ობოლ ბავშვთა მოსავლელად და აღსაზრდელად. [[98]] წელს ნერვა გარდაიცვალა.
 
 ===ტრაიანი===
 [[სურათი:Trajan-thumb.jpg|thumb|left|ტრაიანი]]
@@ -150,7 +150,7 @@
 
 ანტონინუსმა ალიმენტარული ფონდის გაზარდა. მან ასევე შეცვალა მონების მდგომარეობა იმპერიაში, ახლა მონის მკვლელობა უკვე თავისუფალი ადამიანის მკვლელობას გაუტოლდა, ხოლო თუ მონამ თავი ტაძარს ან იმპერატორის ქადაკებას შეაფარა, მაშინ იგი ძველ პატრონს აღარ დაუბრინდებოდა.
 
-მისი საგარეო პოლიტიკა ადრიანუსის პოლიტიკისგან არ განსხვდებოდა. ანტონინუსი [[161]] წელს გარდაიცვალა. მისი მემკვიდრე გახდა მისი შვილობილი [[მარკუს აურელიუსი]].
+მისი საგარეო პოლიტიკა ადრიანუსის პოლიტიკისგან არ განსხვავდებოდა. ანტონინუსი [[161]] წელს გარდაიცვალა. მისი მემკვიდრე გახდა მისი შვილობილი [[მარკუს აურელიუსი]].
 
 ===მარკუს ავრელიუსი===
 [[სურათი:Marcus.jpg|thumb|მარკუს აურელიუსის ქანდაკება]]
@@ -197,11 +197,11 @@
 
 სეპტიმიუს სევერუსის სიკვდილის შემდეგ იმპერატორებად მისი ვაჟები მარკუს ავრელიუს ანტონინი (რომელიც ისტორიაში მეტსახელით [[კარაკალა]] შევიდა) და მისი ძმა [[გეტა]] გამოაცხადეს. [[212]] წელს კარაკალამ მოკლა გეტა და გაჟლიტა მისი მომხრეები. 
 
-იმპერიის მართვა მან დედინაცვალს მიანდო, ხოლო თვითონ დუნაის საზღვარზე გაემგზავრა, სადაც წარმატებით შეაჩერა გერმანული ტომების შემოტევა. ამის შემდეგ იგი სირიაში გაემგზავრა, საიდანაც გერგმავდა პართიასთან ფართომაშტაბიან ომს.
+იმპერიის მართვა მან დედინაცვალს მიანდო, ხოლო თვითონ [[დუნაი|დუნაის]] საზღვარზე გაემგზავრა, სადაც წარმატებით შეაჩერა გერმანული ტომების შემოტევა. ამის შემდეგ იგი [[სირია|სირიაში]] გაემგზავრა, საიდანაც გეგმავდა პართიასთან ფართომაშტაბიან ომს.
 
 იმპერიის ეკონომიკური მდგომარეობა ძალიან მძიმე იყო, ჯერ კიდევ სეპტიმიუსმა დაიწყო ფულის გამოშვება, სადაც ოქრო და ვერცხლი ნაკლები იყო, მაგრამ ნომინალი იგივე, კარაკალამ ამის გამოყენება უფრო ხშირად დაიწყო, მაგრამ ამ ზომამ მდგომარეობა კიდევ უფრო დაამძიმა. [[212]] წელს იმპერიის მთელმა თავისუფალმა მოსახლეობამ მიიღო რომის მოქალაქეობა, მაგრამ არც ამან უშველა საქმეს. 
 
-კარაკალა ისტორიაში თავისი სისასტიკით, სიგიჟით, გარყვნილობით და ვერაგობით შევიდა. [[215]] წელს მან ალექსანდრიელი ახალგაზრდობა ცირკში დაპატიჟა სადაც მათი ამოწყვეტა ბრძანა. [[217]] წელს იგი ჯერ  პართიის მეფეს მეგობრობას დაპირდა, შემდეგ კი ვერაგულად დაესხა ასურეთის რამოდენიმე ქალაქს და გაანადგურა. იმავე წელს კარაკალა შეთქმულებმა მოკლეს.
+კარაკალა ისტორიაში თავისი სისასტიკით, სიგიჟით, გარყვნილობით და ვერაგობით შევიდა. [[215]] წელს მან ალექსანდრიელი ახალგაზრდობა ცირკში დაპატიჟა, სადაც მათი ამოწყვეტა ბრძანა. [[217]] წელს იგი ჯერ  პართიის მეფეს მეგობრობას დაპირდა, შემდეგ კი ვერაგულად დაესხა ასურეთის რამოდენიმე ქალაქს და გაანადგურა. იმავე წელს კარაკალა შეთქმულებმა მოკლეს.
 
 ===მაკრინუსი და ელაგაბალუსი===
 
@@ -273,7 +273,7 @@
 ძველი პროვინციები უფრო მცირე ერთეულებად დაიყო, ასევე იტალიაც. 10-12 პროვინცია ერთიანდებოდა დიოცეზებად, რომლებსაც ვიკარიუსები ხელმძღვანელობდნენ. ეს რეფორმა მიმართული იყო პროვინციის თავდაცვის უნარის ასამაღლებლად. გალერიუსი და ქლორუსი ავგუსტუსების ქალიშვილებზე დაქორწინდნენ და მათი შვილობილები გახდნენ. დიოკლექტიანეს და მაქსიმინუსის მმართველობის დაწყებიდან 20 წლის შემდეგ მათ უარი უნდა ეთქვათ იმპერატორიბაზე და იმპერატორებად კეისრები გამოეცხადებინათ, რომლებსაც უნდა აერჩიათ ახალი კეისრები მხედართმთავრებისგან. მმართველობის ეს სისტემა [[ტეტრარქატი|ტეტრარქატის]] (ოთხთა მმართველობის) სახელით შევიდა ისტორიაში. ეს იყო აბსოლუტიზმის და სამხედრო ადმინისტრაციული მმართველობის შერწყმა. მმართველობის ამ ფორმამ ცენტრალური ხელისუფლების გამაგრება გამოიწვია.
 
 [[სურათი:Tetrarch system.PNG|thumb|იმპერიის გაყოფა ტეტრარქებს შორის]]
-ამ რეფორმებმა გაამართლა. პატარა პროვინციების მართვა უფრო ადვილი იყო, სეპარატისტული მოძრაობები ჩანასახშივე იხსობოდა. რომი პრაკტიკულად აღარ იყო დედაქლაქი, სენატმაც დაკარგა უწიდნებური მნიშვნელობა, იგი პრაკტიკულად ქალაქის საბჭოთ გადაიქცა. 
+ამ რეფორმებმა გაამართლა. პატარა პროვინციების მართვა უფრო ადვილი იყო, სეპარატისტული მოძრაობები ჩანასახშივე იხსობოდა. რომი პრაკტიკულად აღარ იყო დედაქალაქი, სენატმაც დაკარგა უწიდნებური მნიშვნელობა, იგი პრაკტიკულად ქალაქის საბჭოთ გადაიქცა. 
 
 ჩატარდა სამხედრო რეფორმაც. მიწის მაგნატებს ჯარისთვის მკაცრად განსაზღვრული რაოდენობის ჯარისკაცები უნდა მიეწოდებინათ. პარალელურად არსებობდა სეპტიმიუს სევერუსის მიერ შექმნილი სასაზღვრო არმიები, რომლებიც საზღვრების მახლობლად სოფლებში ცხოვრობდნენ ოჯახებთან ერთად.
 
@@ -307,7 +307,7 @@
 
 ===კონსტანციუსი და იულიანუსი===
 
-კონსტანტინემ სიკვდილის წინ იმპერია გაყო თავის ვაჟებსა და ძმის შვილებს შორის. მისი გარდაცვალებისთანავე მისმა ვაჟმა [[კონსტანციუსი|კონსტანციუსმა]] მოაწყო სამხედრო აჯანყება კონსტანტინოპოლში და მოაკვლევინა თავისი ბიძაშვილები. ამგვარად აღმოსავლეთის მმართველი გახდა კონსტანციუსი, ხოლო მის ძმას კონსტანტს დასავლეთი ერგო. მან 13 წელი გაძლო ტახტზე, იგი მხედართმავარმა მაგნეციუსმა მოკლა. ამგვარად [[351]] წელს კონსტანციუსი იმპერიის ერთადდერთი მმართველი გახდა. 
+კონსტანტინემ სიკვდილის წინ იმპერია გაყო თავის ვაჟებსა და ძმის შვილებს შორის. მისი გარდაცვალებისთანავე მისმა ვაჟმა [[კონსტანციუსი|კონსტანციუსმა]] მოაწყო სამხედრო აჯანყება [[კონსტანტინოპოლი|კონსტანტინოპოლში]] და მოაკვლევინა თავისი ბიძაშვილები. ამგვარად აღმოსავლეთის მმართველი გახდა კონსტანციუსი, ხოლო მის ძმას კონსტანტს დასავლეთი ერგო. მან 13 წელი გაძლო ტახტზე, იგი მხედართმავარმა მაგნეციუსმა მოკლა. ამგვარად [[351]] წელს კონსტანციუსი იმპერიის ერთადდერთი მმართველი გახდა. 
 
 ფრანკებმა და ალემანებმა განაახლეს გალიაში შემოტევები. ჯარი მათ წინააღმდეგობას ფაქტიურად ვერ უწევდა, რის შედეგადაც ბარბაროსები თავისუფლად სახლდებოდნენ გალურ სოფლებში. ამავდროულად დაიწყო ომი დუნაელ სამანტებთან და აღმოსავლეთში სპარსეთთან შუამდინარეთსა და სასომხეთის გამო. 
 
@@ -391,9 +391,9 @@
 [[სურათი:RomulusAugustus.jpg|thumb|left|რომულუს ავგუსტული, რომის უკანასკნელი იმპერატორი]]
 ამ დროიდან იმპერიის ტახტი ბარბაროსთა მეფეების ხელში სათამაშოდ იქწცა. [[476]] წელს გვარდიის ხელმძღვანელმა ოდოაკრმა ჩამოაგდო 16 წლის რომის უკანასკნელი იმპერატორი, რომელსაც ბედის ირონიით იგივე სახელი ექვა რაც რომის ლეგენდარულ დამაარსებელს რომულუსს. მან ამით მოსპო იმპერატორის ინსტიტუტი როგორ ეგეთი.
 
-ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუასაუკუნეებში.
+ასე დაასრულა არსებობა მსოფლიოს ერთერთმა უდიდესმა იმპერიამ, რომელიც აერთიანებდა მთელს ხმელთაშუაზღვისპირეთს და დასავლეთ ევროპას. ჩაესვენა ერთერთი უდიდესი ცივილიზაცია და ევროპა გადავარდა ათასწლეულით უკან - ბნელ შუა საუკუნეებში.
 
-==წყაროები==
+==ლიტერატურა==
 
 * [[პლუტარქოსი]] - შედარებითი ბიოგრაფიები
 * [[გაიუს სვეტონიუს ტრანკვილუსი]] - 12 კეისარის ცხოვრება
